9-Стратегии-развертывания/Решение/blue-green/manifests/deployment-green.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-green
  namespace: st-ab5-statsenko
  labels:
    app: my-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
      type: green
  template:
    metadata:
      labels:
        app: my-app
        type: green
        version: v2.0.0
      annotations:
        sage/group: "ab5_statsenko"
    spec:
      containers:
        - name: my-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          image: containersol/k8s-deployment-strategies
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9101
            - name: probe
              containerPort: 8086
          livenessProbe:
            httpGet:
              path: /live
              port: 8086
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8086
            initialDelaySeconds: 5
            periodSeconds: 5
