9-Стратегии-развертывания/Решение/blue-green/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: st-ab5-statsenko
  labels:
    app: my-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9101"
    prometheus.io/path: /metrics
spec:
  type: ClusterIP
  selector:
    app: my-app
    type: blue
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9101
      targetPort: 9101
