9-Стратегии-развертывания/Решение/blue-green/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: st-ab5-statsenko
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.st-ab5-statsenko.ingress.sre-ab.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 8080
